--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="src" path=""/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/Users/manoj/Downloads/mysql-connector-java-8.0.17/mysql-connector-java-8.0.17.jar"/>
+	<classpathentry kind="lib" path="/Users/manoj/Downloads/mongo-java-driver-2.13.3-javadoc.jar"/>
+	<classpathentry kind="lib" path="/Users/manoj/Downloads/mongodb-driver-3.4.3.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
